# pathsolver

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.cjs  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.pages-plugin.ts
.github/workflows/: deploy.yml  test.yml
docs/: level-seeds.md  release.md
public/: robots.txt
public/locales/: de.json  en.json  fr.json
src/: App.svelte  App.tsx  main.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/pathfinder-app/: Cargo.toml
src-tauri/pathfinder-levels/: Cargo.toml
src-tauri/pathfinder-levels/src/: board.rs  error.rs  lib.rs  operation.rs  wasm.rs
src-tauri/pathfinder-levels/tests/: level_generation.rs
src/@types/: css.d.ts  i18next.d.ts
src/__tests__/: index.ts  mocks.ts
src/components/: Button.svelte  Checkbox.svelte  Divider.svelte  Screen.svelte  ToggleButton.svelte  index.ts
src/features/: index.ts
src/hooks/: index.ts  use-active-level.ts  use-boolean-state.ts  use-generate-level.ts  use-generated-level.ts  use-id.ts  use-level.ts  use-navigation.ts  use-settings-side-effects.ts  use-state-change.ts
src/level-features/: index.ts
src/level-gen/: board.ts  difficulty.ts  generator.ts  index.test.ts  index.ts  level.ts  path.ts
src/level-state/: edges.test.ts  edges.ts  game.test.ts  game.ts  hints.test.ts  hints.ts  index.test.ts  index.ts  nodes.test.ts  nodes.ts  objectives.test.ts  objectives.ts  selection.test.ts  selection.ts  stats.test.ts  stats.ts  (+2 more)
(+177 files in other folders)
