[package]
name = "pathfinder-levels"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }
wee_alloc = { version = "0.4.5", optional = true }

thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }

getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
rand_seeder = "0.2.3"

[dev-dependencies]
test-case = "3.3.1"

[features]
default = []